# swiftER

./: .gitignore  Hospital Timer Gone Style.css  Hospital Timer Gone.html  Main (2).py  Mapbox Hospital Index.html  README.md  Sunnybrook (1).py  data.json  getdata.py  index.html  info.json  main.py  map.html  mapstyle.css  package-lock.json  package.json  points.json  pyproject.toml  questions.html  questions.js  questionsstyle.css  run.sh  script.js  server.js
.upm/: store.json
